// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> closeModal should close the modal when the request was approved 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay jvGGwx"
  >
    <div
      class="sc-bdVaJa iCfsTR"
    >
      <div
        class="sc-htpNat GjkqM"
        style="max-height: 100px;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> closeModal should close the modal when there is no onRequestClose callback 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay jvGGwx"
  >
    <div
      class="sc-bdVaJa iCfsTR"
    >
      <div
        class="sc-htpNat GjkqM"
        style="max-height: 100px;"
      >
        <button
          data-testid="close-modal"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should not render the modal if it is closed 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay WYZne"
  >
    <div
      class="sc-bdVaJa byzClx"
    >
      <div
        class="sc-htpNat GjkqM"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render fullscreen modal with action bars 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay jvGGwx"
  >
    <div
      class="sc-bdVaJa fullscreen iCfsTR"
    >
      <div
        class="sc-bwzfXH ebpCEU"
      >
        <div>
          Action bar controls
        </div>
      </div>
      <div
        class="sc-htpNat GjkqM"
      >
        <div>
          Modal contents
        </div>
      </div>
      <div
        class="sc-bxivhb kWgXZK"
      >
        <div>
          Place your controls here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render with actionBar and bottomActionBar 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay jvGGwx"
  >
    <div
      class="sc-bdVaJa iCfsTR"
    >
      <div
        class="sc-bwzfXH ebpCEU"
      >
        <div>
          Action bar controls
        </div>
      </div>
      <div
        class="sc-htpNat GjkqM"
      >
        <div>
          Modal contents
        </div>
      </div>
      <div
        class="sc-bxivhb kWgXZK"
      >
        <div>
          Place your controls here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> render should render without errors and pass extra props 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay jvGGwx"
  >
    <div
      class="sc-bdVaJa iCfsTR"
      style="width: 210px;"
    >
      <div
        class="sc-htpNat GjkqM"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should recalculate shadows and content height on props change 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay jvGGwx open-enter open-enter-active"
  >
    <div
      class="sc-bdVaJa iCfsTR open-enter open-enter-active"
    >
      <div
        class="sc-htpNat GjkqM"
        style="max-height: 100px;"
      >
        <div>
          Modal contents
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should set bottom action bar shadow when the content was scrolled 1`] = `
<div>
  <div
    class="sc-ifAKCX container--overlay jvGGwx"
  >
    <div
      class="sc-bdVaJa iCfsTR"
    >
      <div
        class="sc-htpNat GjkqM"
        style="max-height: 100px;"
      >
        <div
          data-testid="content"
        >
          Modal contents
        </div>
      </div>
      <div
        class="sc-bxivhb kWgXZK"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
